# mirage-rs

./: .env  Cargo.toml  build.rs
dashboard/: package-lock.json  package.json  svelte.config.js
dashboard/src/components/: breadcrumb.svelte
dashboard/src/routes/: __layout.svelte  about.svelte  index.svelte
dashboard/src/routes/endpoint/: [id].svelte
migrations/2021-06-04-020645_create_apis/: down.sql  up.sql
migrations/2021-06-04-200751_create_endpoints/: down.sql  up.sql
migrations/2021-06-04-200757_create_allows/: down.sql  up.sql
migrations/2021-06-04-200804_create_contents/: up.sql
src/: db.rs  error_handler.rs  main.rs  models.rs  route.rs  schema.rs
static/: index.html
static/_app/: error.svelte-2315b40b.js  error.svelte-7ee753ec.js  layout.svelte-b0c761e5.js  start-6295c6fd.js  start-8d10a37e.js  start-e231540c.js
static/_app/assets/pages/: __layout.svelte-4c8059b1.css  index.svelte-7ea0875a.css
static/_app/assets/pages/endpoint/: [id].svelte-0dbbb301.css
static/_app/chunks/: vendor-96df5c7a.js  vendor-971dc53b.js
static/_app/pages/: __layout.svelte-5e4bcd9e.js  about.svelte-d54e1e2d.js  index.svelte-b0889cdc.js  index.svelte-e218d7f2.js
static/_app/pages/endpoint/: [id].svelte-9926e855.js
static/about/: index.html
