[package]
name = "mirage-rs"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
r2d2 = "0.8"
lazy_static = "1.4.0"
serde = "1.0.126"
serde_json = "1.0.64"